# Uni-CPP

./: .gitignore  CMakeLists.txt  Circle.cpp  Circle.h  Person.h  README.md  circle.cpp  circle.hpp  main.cpp  matrixMain.cpp  matrixTranspose.cpp  matrixTranspose.h  matrixTranspose.hpp  virusFunctions.cpp  virusFunctions.h  virusMain.cpp
CPPExam/: README.md  fractal  main.cpp  mandelTransform.cpp  mandelbrotSet.cpp
CPPExam/include/: mandelTransform.hpp  mandelbrotSet.hpp
CPPExam/output/: mandelbrot.txt
Mock/: cone.cpp  cone.hpp  cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  mockMain.cpp  sphere.cpp  sphere.hpp  surfaceMassRatio.cpp  surfaceMassRatio.hpp
ProblemSheet1/: BRIEF.md  argChecker.cpp  q1  q2  q3  qOneFunctions.cpp  qOneMain.cpp  qThreeMain.cpp  qTwoMain.cpp  randomDouble.cpp  rollingDice.cpp
ProblemSheet1/Programme Output/: games_of_craps.csv
ProblemSheet1/include/: ARG_CHECK.h  qOneFunctions.h  randomDouble.h  rollingDice.h
ProblemSheet2/: Person.cpp  circle.cpp  matrixMain.cpp  matrixTranspose.cpp  q1  q2  q3  virusFunctions.cpp  virusMain.cpp
ProblemSheet2/Sim 98/: person98.hpp  status98.hpp  virusFunctions98.cpp  virusFunctions98.hpp
ProblemSheet2/Virus Simulation/: README.md  person.hpp  virusFunctions.cpp  virusFunctions.hpp
ProblemSheet2/include/: Circle.hpp  Person.hpp  matrixTranspose.hpp  (+2 more)
Sim 98/: person98.cpp  person98.hpp  virusFunctions98.cpp  virusFunctions98.hpp  virusMain98.cpp
Virus Simulation/: Person.cpp  Person.hpp  README.md  person.cpp  person.hpp  status.hpp  virusFunctions.cpp  virusFunctions.hpp  virusMain.cpp
