cmake_minimum_required(VERSION 3.15.3)
project(Uni_CPP)

#set(CMAKE_CXX_STANDARD 98)
#add_executable(uniCPP "Sim 98/person98.cpp" "Sim 98/person98.hpp" "Sim 98/virusFunctions98.cpp" "Sim 98/virusFunctions98.hpp" "Sim 98/virusMain98.cpp")

set(CMAKE_CXX_STANDARD 11)
#add_executable(uniCPP "Virus Simulation/Person.hpp" "Virus Simulation/virusFunctions.cpp" "Virus Simulation/virusFunctions.hpp" "Virus Simulation/virusMain.cpp" "Virus Simulation/Person.cpp")
#add_executable(uniCPP matrixTranspose.cpp matrixTranspose.hpp matrixMain.cpp)
add_executable(uniCPP circle.cpp circle.hpp)